# matrix-gptbot

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.dist.ini  database.db-journal  docker-compose.yml  fetch_access_token.py  gptbot-pantalaimon.service  gptbot.py  gptbot.service  pantalaimon.example.conf  pyproject.toml  requirements.txt
.forgejo/workflows/: docker-internal.yml  docker-latest.yml  docker-tag.yml  release.yml
callbacks/: __init__.py  invite.py  join.py  message.py  roommember.py  sync.py  test.py
classes/: __init__.py  bot.py  openai.py  store.py  wolframalpha.py
commands/: __init__.py  botinfo.py  calculate.py  chat.py  classify.py  coin.py  custom.py  dice.py  help.py  ignoreolder.py  imagine.py  newroom.py  parcel.py  roomsettings.py  space.py  stats.py  systemmessage.py  unknown.py
contrib/: pantalaimon.example.conf
migrations/: __init__.py  migration_1.py  migration_2.py  migration_3.py  migration_4.py  migration_5.py  migration_6.py  migration_7.py  migration_8.py
src/gptbot/: __main__.py
src/gptbot/callbacks/: __init__.py  base.py  encrypted.py  invite.py  join.py  keys.py  message.py  roommember.py  sync.py  test.py  test_response.py
src/gptbot/classes/: bot.py  dict.py  logging.py  openai.py  trackingmore.py  wolframalpha.py
src/gptbot/classes/ai/: base.py  google.py  openai.py
src/gptbot/commands/: __init__.py  botinfo.py  calculate.py  chat.py  classify.py  dice.py  help.py  ignoreolder.py  imagine.py  newroom.py  privacy.py  roomsettings.py  space.py  stats.py  systemmessage.py  tts.py  unknown.py
src/gptbot/migrations/: __init__.py  migration_1.py  migration_2.py  migration_3.py  migration_4.py  migration_5.py  migration_6.py  migration_7.py  migration_8.py
src/gptbot/tools/: __init__.py  base.py  datetime.py  dice.py  geocode.py  imagedescription.py  imagine.py  newroom.py  weather.py  webrequest.py  websearch.py  wikipedia.py
