[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "matrix-gptbot"
version = "0.2.2"

authors = [
  { name="Kumi Mitterer", email="gptbot@kumi.email" },
]

description = "Multifunctional Chatbot for Matrix"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"

packages = [
    "src/gptbot"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matrix-nio[e2e]",
    "markdown2[all]",
    "tiktoken",
    "python-magic",
    "pillow",
    ]

[project.optional-dependencies]
openai = [
    "openai>=1.2",
    "pydub",
]

wolframalpha = [
    "wolframalpha",
]

trackingmore = [
    "trackingmore @ git+https://kumig.it/kumitterer/trackingmore-api-tool.git",
]

e2ee = [
    "pantalaimon",
]

all = [
  "matrix-gptbot[openai,wolframalpha,trackingmore,e2ee]",
  "geopy",
  "beautifulsoup4",
]

dev = [
  "matrix-gptbot[all]",
  "black",
]

[project.urls]
"Homepage" = "https://kumig.it/kumitterer/matrix-gptbot"
"Bug Tracker" = "https://kumig.it/kumitterer/matrix-gptbot/issues"

[project.scripts]
gptbot = "gptbot:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gptbot"]