[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "matrix-gptbot"
version = "0.3.20"

authors = [
  { name = "Kumi", email = "gptbot@kumi.email" },
  { name = "Private.coffee Team", email = "support@private.coffee" },
]

description = "Multifunctional Chatbot for Matrix"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

packages = ["src/gptbot"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "matrix-nio[e2e]>=0.24.0",
  "markdown2[all]",
  "tiktoken",
  "python-magic",
  "pillow",
  "future>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.2", "pydub"]

google = ["google-generativeai"]

wolframalpha = ["wolframalpha"]

trackingmore = ["trackingmore-api-tool"]

all = [
  "matrix-gptbot[openai,wolframalpha,trackingmore,google]",
  "geopy",
  "beautifulsoup4",
]

dev = ["matrix-gptbot[all]", "black", "hatchling", "twine", "build", "ruff"]

[project.urls]
"Homepage" = "https://git.private.coffee/privatecoffee/matrix-gptbot"
"Bug Tracker" = "https://git.private.coffee/privatecoffee/matrix-gptbot/issues"
"Source Code" = "https://git.private.coffee/privatecoffee/matrix-gptbot"

[project.scripts]
gptbot = "gptbot.__main__:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["src/gptbot"]
